# moonlink

./: .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  Cargo.toml  debug_otel.rs  deny.toml  test_otel_server.rs
.devcontainer/: Dockerfile  docker-compose.yml
.devcontainer/certs/: ca.srl
.devcontainer/shared-iceberg-rest-db/: iceberg.db
.github/workflows/: ci.yml  ci_typos.yml  community_auto_label.yml
cloud/gcp/deployment/: moonlink_deployment.yaml
src/moonlink/: Cargo.toml
src/moonlink/benches/: bench_write.rs  microbench_write_mooncake_table.rs
src/moonlink/src/: error.rs  event_sync.rs  lib.rs  storage.rs  table_handler.rs  table_handler_timer.rs  table_notify.rs
src/moonlink_backend/: Cargo.toml
src/moonlink_backend/src/: columnstore_table_id.rs  config_utils.rs  error.rs  file_utils.rs  lib.rs  (+6 more)
src/moonlink_connectors/: Cargo.toml
src/moonlink_metadata_store/: Cargo.toml
src/moonlink_metadata_store/src/: base_metadata_store.rs  config_utils.rs  error.rs  lib.rs  metadata_store_utils.rs  postgres.rs
src/moonlink_metadata_store/src/postgres/: config_utils.rs  pg_client_wrapper.rs  pg_metadata_store.rs  utils.rs
src/moonlink_metadata_store/src/postgres/sql/: create_secrets.sql
src/moonlink_metadata_store/src/sqlite/: sqlite_metadata_store.rs  tests.rs  utils.rs
src/moonlink_metadata_store/src/sqlite/sql/: create_secrets.sql
src/moonlink_metadata_store/tests/: test_environment.rs  test_pg_metadata_store.rs  test_pg_metadata_store_utils.rs
src/moonlink_metadata_store/tests/common/: test_utils.rs
src/moonlink_service/: Cargo.toml
(+223 files in other folders)
