[package]
name = "moonlink_metadata_store"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
moonlink = { path = "../moonlink" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
